style: Update Bengali font from Hind Siliguri to Anek Bangla.

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
     --radius-full: 9999px;
     
     /* Typography */
-    --font-bengali: 'Hind Siliguri', sans-serif;
+    --font-bengali: 'Anek Bangla', sans-serif;
     --font-english: 'Inter', sans-serif;
     
     /* Transitions */
